{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 28,
  "lineage": "ff1c04e3-f0eb-f527-e6ab-3f617bfbad83",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970756163498:internet-gateway/igw-0b22f5ac2b6670711",
            "id": "igw-0b22f5ac2b6670711",
            "owner_id": "970756163498",
            "tags": {
              "Name": "terraform-101-igw"
            },
            "vpc_id": "vpc-0957e28fde891ae3f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05fd6cf1c81a7ed09",
            "owner_id": "970756163498",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-101-rt-private"
            },
            "vpc_id": "vpc-0957e28fde891ae3f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05425663c62cba5a0",
            "owner_id": "970756163498",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-101-rt-public"
            },
            "vpc_id": "vpc-0957e28fde891ae3f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7c518032adb19d2",
            "route_table_id": "rtb-05425663c62cba5a0",
            "subnet_id": "subnet-0563fc20045b1418c"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970756163498:subnet/subnet-0563fc20045b1418c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0563fc20045b1418c",
            "map_public_ip_on_launch": false,
            "owner_id": "970756163498",
            "tags": {
              "Name": "101subnet-1"
            },
            "vpc_id": "vpc-0957e28fde891ae3f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:970756163498:vpc/vpc-0957e28fde891ae3f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b77221db966e89d5",
            "default_route_table_id": "rtb-0ba0922b31d672784",
            "default_security_group_id": "sg-0a821ee4e90d14961",
            "dhcp_options_id": "dopt-49a13322",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0957e28fde891ae3f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ba0922b31d672784",
            "owner_id": "970756163498",
            "tags": {
              "Name": "terraform-101"
            }
          }
        }
      ]
    }
  ]
}